--- a/style.css
+++ b/style.css
@@ -5,6 +5,21 @@ h2 {
 h2 {
   font-size: 20px;
 }
+th,
+td {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.container {
+  max-width: 100%;
+}
+#lists {
+  list-style: none;
+  padding: 10px;
+  margin: 0;
+}
 .card-body {
   display: block;
   margin: 0 auto;
@@ -36,8 +51,8 @@ h2 {
   margin: 10px;
   padding: 10px 10px;
 }
-#github-link {
+.table {
   text-align: center;
-  font-size: 8px;
-  font-weight: bold;
+  padding: 50px;
+  height: 200px;
 }
