--- a/style.css
+++ b/style.css
@@ -1,58 +1,65 @@
-h1,
-h2 {
-  text-align: center;
+body {
+  font-family: "Montserrat", sans-serif;
 }
-h2 {
-  font-size: 20px;
+
+h1 {
+  color: #878787;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-bottom: 0;
 }
-th,
-td {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-.container {
-  max-width: 100%;
-}
-#lists {
-  list-style: none;
-  padding: 10px;
+
+ul {
   margin: 0;
+  padding: 0;
 }
-.card-body {
-  display: block;
-  margin: 0 auto;
-  width: 100%;
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: rgb (135, 135, 135);
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+}
+li:first-letter {
+  text-transform: capitalize;
+}
+.weather-wrap {
+  max-width: 600px;
+  margin: 30px auto;
   background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 }
-.card-title {
-  text-align: center;
-  font-weight: bold;
-  font-size: 30px;
+.weather-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
 }
-.weather {
-  font-size: 12px;
+.overview {
+  margin-bottom: 20px;
 }
-#search-weather {
-  position: inline;
-  width: 20%;
-  left: 30px;
-  margin: 10px;
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
 }
-#submit-city {
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+}
+.weather-temperature units {
   position: relative;
-  margin: 10px;
-  left: 100px;
+  font-size: 16px;
+  top: -34px;
 }
-#current-location {
-  position: relative;
-  display: block;
-  margin: 10px;
-  padding: 10px 10px;
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
 }
-.table {
-  text-align: center;
-  padding: 50px;
-  height: 200px;
+
+.weather-temperature .active:hover {
+  text-decoration: none;
 }
