Correct JS code temp-day

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ li:first-letter {
 .weather-temperature .active {
   color: rgb(33, 33, 33);
   cursor: default;
+  text-decoration: none;
 }
 
 .weather-temperature .active:hover {
